--- a/app/assets/stylesheets/shared/annotations.scss
+++ b/app/assets/stylesheets/shared/annotations.scss
@@ -39,14 +39,10 @@ body > [role="dialog"] .Annotations {
   .attribute {
     font-weight: 600;
     cursor: pointer;
+    overflow: hidden;
   }
   .value {
-    white-space: nowrap;
-    text-indent: -27px;
-    padding-inline-start: 35px;
-    .value-label {
-      white-space: normal;
-    }
+    display: flex;
   }
   .UserImage {
     min-width: 22px;
@@ -60,6 +56,7 @@ body > [role="dialog"] .Annotations {
   }
   .agree, .disagree {
     text-align: left;
+    padding: 8px 4px;
   }
 
   tr.disabled td {
